Fix Cloudflare Pages build issues: Add Cloudflare-specific configurations and npm settings

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cf-build": "npm install --prefer-online && npm run build"
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
